Add Korean as 12th language to translation options

--- a/popup.html
+++ b/popup.html
@@ -135,6 +135,7 @@
                 <option value="pt">🇵🇹 Portuguese</option>
                 <option value="ru">🇷🇺 Russian</option>
                 <option value="ja">🇯🇵 Japanese</option>
+                <option value="ko">🇰🇷 Korean</option>
                 <option value="zh">🇨🇳 Chinese</option>
                 <option value="ar">🇸🇦 Arabic</option>
                 <option value="hi">🇮🇳 Hindi</option>
@@ -152,6 +153,7 @@
                 <option value="pt">🇵🇹 Portuguese</option>
                 <option value="ru">🇷🇺 Russian</option>
                 <option value="ja">🇯🇵 Japanese</option>
+                <option value="ko">🇰🇷 Korean</option>
                 <option value="zh">🇨🇳 Chinese</option>
                 <option value="ar">🇸🇦 Arabic</option>
                 <option value="hi">🇮🇳 Hindi</option>
